GNOME Bugzilla – Bug 687232
Wrong window geometry after going to A11y panel
Last modified: 2012-11-02 16:28:06 UTC
If you go to the hearing tab of a11y, and from there you jump to sound, when going back to the overview g-c-c gets confused and keeps the window higher than it should be. It's easy to notice the brokenness by looking at the background panel. This is with GNOME_CONTROL_CENTER_3_7_1-3-g7409591
Created attachment 227695 [details] [review] Remove previous panel widget when switching to a new one If we don't remove it, it intereferes with the layout of the new panel and cause weird overallocation effects.
Review of attachment 227695 [details] [review]: No. Check the code there, and the history as well, we want to keep the old panel for as long as possible.
Currently, if you go back to the overview mode from a panel, the panel is removed from the notebook, causing it to be destroyed. If you go to a panel and then jump to another panel, only the last panel is removed when going back to the overview mode. The patch appears to remove this inconsistency.
(In reply to comment #2) > Review of attachment 227695 [details] [review]: > > No. Check the code there, and the history as well, we want to keep the old > panel for as long as possible. Maybe I didn't check hard enough, but the code is not clear why we should keep the panel there, and neither is the history (looking at commit messages only)
We don't want to nuke the old panel until the new one is actually created (it doesn't need to have been packed in the shell itself though), so that invalid panel names, or broken panels don't cause panel switches that wouldn't work.
Created attachment 227906 [details] [review] Remove previous panel widget when switching to a new one If we don't remove it, it intereferes with the layout of the new panel and cause weird overallocation effects.
See also the additional patch I committed, to avoid the old panel being thrown away if we can't load the new one. Attachment 227906 [details] pushed as e178a20 - Remove previous panel widget when switching to a new one