Remove previous panel widget when switching to a new one

If we don't remove it, it intereferes with the layout of the new panel
and cause weird overallocation effects.

https://bugzilla.gnome.org/show_bug.cgi?id=687232